--- a/style.css
+++ b/style.css
@@ -7,3 +7,13 @@
     box-sizing: border-box;
 }
 
+.box {
+    border: 4px solid lightgray;
+    width: 100px;
+    height: 100px;
+}
+
+.box-small {
+    width: 50px;
+    height: 50px;
+}
