--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
-
-* {
-    font-family: "Roboto", serif;
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
 .box {
     border: 4px solid lightgray;
     width: 100px;
@@ -16,4 +7,16 @@
 .box-small {
     width: 50px;
     height: 50px;
+    margin-left: 24px;
+}
+
+.box-wrapper {
+    display: flex;
+    align-items: center;
+}
+.container {
+    border: 4px solid lightgray;
+    display: flex;
+    justify-content: space-between;
+    padding: 24px;
 }
